--- a/style.css
+++ b/style.css
@@ -9,10 +9,60 @@ body {
 }
 
 .font-primary {
-    color: #00abae;
+    color: #F25DF2;
 }
 
 .title-icon {
     font-size: 20px;
     font-weight: bold;
 }
+
+/*************
+
+About
+
+************/
+
+#about {
+    margin: 60px auto;
+    max-width: 400px;
+    text-align: center;
+
+}
+
+#about img {
+    border-radius: 50%;
+    width: 120px;
+    margin-bottom: 10px;
+}
+
+#about .name {
+    font-size: 19px;
+}
+
+#about .vocation {
+    font-size: 17px;
+    color: #A8ABAB;
+    margin-bottom: 10px;
+}
+
+#about .skills {
+    font-size: 15px;
+    color: #F25DF2;
+    margin-bottom: 10px;
+}
+
+#about .email {
+    margin-top: 14 px;
+    font-size: 14px;
+}
+
+#about .icons {
+    margin-top: 20px;
+    font-size: 30px;
+}
+
+#about .icons a{
+    color: #F25DF2;
+}
+
