--- a/style.css
+++ b/style.css
@@ -17,6 +17,20 @@ body {
     font-weight: bold;
 }
 
+p {
+    font-size: 14px;
+}
+
+h2 {
+    font-weight: bold;
+    font-size: 23 px;
+    margin-bottom: 20 px;
+}
+
+a.font-black {
+    color: #000 !important;
+}
+
 /*************
 
 About
@@ -62,7 +76,29 @@ About
     font-size: 30px;
 }
 
-#about .icons a{
+#about .icons a {
     color: #F25DF2;
 }
 
+/*********************
+
+PROJECT
+
+*********************/
+
+#project {
+    margin: 60px auto;
+    width: 80%;
+}
+
+#project h2 {
+    text-align: center;
+}
+
+#project .card img {
+    width: 120%;
+}
+
+#project .card-title {
+    font-weight: bold;
+}
